att analizador lexico

--- a/Trab02.ipynb
+++ b/Trab02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,138 +25,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"I\" in Palavras_Reservadas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 CLASSE : IDENTIFICADOR (TOKEN 0)\n",
-      "1 CLASSE : IDENTIFICADOR (TOKEN 1)\n",
-      "0 CLASSE : IDENTIFICADOR (TOKEN 2)\n",
-      "1 CLASSE : IDENTIFICADOR (TOKEN 3)\n"
+      "VALOR : IF CLASSE : IDENTIFICADOR (TOKEN 0)\n",
+      "VALOR : X CLASSE : IDENTIFICADOR (TOKEN 1)\n",
+      "VALOR : + CLASSE : OUTRO CARACTERE (TOKEN 2)\n",
+      "VALOR : 2 CLASSE : NUMERO (TOKEN 3)\n",
+      "VALOR : > CLASSE : OUTRO CARACTERE (TOKEN 4)\n",
+      "VALOR : 10 CLASSE : NUMERO (TOKEN 5)\n",
+      "VALOR : THEN CLASSE : IDENTIFICADOR (TOKEN 6)\n",
+      "VALOR : PRINT CLASSE : IDENTIFICADOR (TOKEN 7)\n",
+      "VALOR : ELSE CLASSE : IDENTIFICADOR (TOKEN 8)\n",
+      "VALOR : 1 CLASSE : NUMERO (TOKEN 9)\n"
      ]
     }
    ],
    "source": [
     "Palavras = []\n",
-    "Classe = []\n",
-    "aux = \"\"\n",
-    "Numero = 0\n",
+    "Classes = []\n",
+    "Classe = \"\"\n",
+    "Palavra = \"\"\n",
     "Estado = \"E1\"\n",
+    "Tamanho_Entrada = len(Entrada)\n",
     "\n",
-    "for i in Entrada:\n",
-    "\n",
-    "    #E2 \n",
-    "    if i in Alfabeto:\n",
-    "        aux += i\n",
-    "        if aux in Palavras_Reservadas:\n",
-    "            print(\"{} CLASSE : PALAVRA RESERVADA (TOKEN {})\".format(aux,Numero))\n",
-    "            Numero += 1\n",
-    "            aux = \"\"\n",
-    "    #E3\n",
-    "    if i in Numeros:\n",
-    "        aux += i\n",
-    "        print(\"{} CLASSE : IDENTIFICADOR (TOKEN {})\".format(i,Numero))\n",
-    "        Numero += 1\n",
-    "        aux = \"\"\n",
-    "    else:\n",
-    "        aux = \"\"\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "IF CLASSE : PALAVRA RESERVADA (TOKEN 0)\n",
-      "X CLASSE : IDENTIFICADOR (TOKEN 1)\n",
-      "2 CLASSE : NUMERO (TOKEN 1)\n",
-      "10 CLASSE : NUMERO (TOKEN 2)\n",
-      "THEN CLASSE : PALAVRA RESERVADA (TOKEN 3)\n",
-      "PRINT CLASSE : PALAVRA RESERVADA (TOKEN 4)\n",
-      "X CLASSE : IDENTIFICADOR (TOKEN 5)\n",
-      "ELSE CLASSE : PALAVRA RESERVADA (TOKEN 5)\n",
-      "PRINT CLASSE : PALAVRA RESERVADA (TOKEN 6)\n",
-      "X CLASSE : IDENTIFICADOR (TOKEN 7)\n"
-     ]
-    }
-   ],
-   "source": [
-    "Palavras = []\n",
-    "Classe = []\n",
-    "aux = \"\"\n",
-    "Numero = 0\n",
-    "Estado = \"E1\"\n",
-    "\n",
-    "for i in Entrada:\n",
-    "\n",
+    "for i in range(Tamanho_Entrada):\n",
     "    if Estado == \"E1\":\n",
-    "        if i == \"%\":\n",
+    "\n",
+    "        if Entrada[i] == \":\":\n",
+    "            Estado = \"E4\"\n",
+    "        elif Entrada[i] in Sinais_Pontuacao:\n",
     "            Estado = \"E6\"\n",
-    "        #elif i == \":\":\n",
-    "        #    Estado = \"E4\"\n",
-    "        elif i in Numeros:\n",
+    "        elif Entrada[i] in Numeros:\n",
     "            Estado = \"E3\"\n",
-    "        elif i in Alfabeto:\n",
+    "        elif Entrada[i] in Alfabeto:\n",
     "            Estado = \"E2\"\n",
-    "    \n",
+    "\n",
+    "    #E4\n",
+    "    if Estado == \"E4\":\n",
+    "        Palavra = Entrada[i]\n",
+    "        Classe = \":\"\n",
+    "        Estado = \"E5\"\n",
+    "\n",
+    "    #E5\n",
+    "    if Estado == \"E5\":\n",
+    "\n",
+    "        if Entrada[i] == \"=\":\n",
+    "            Palavra = + Entrada[i]\n",
+    "            Classe = \":=\"\n",
+    "            Estado = \"E1\"\n",
+    "\n",
+    "\n",
+    "    #E6\n",
+    "    if Estado == \"E6\":\n",
+    "        Palavra = Entrada[i]\n",
+    "        Classe = \"OUTRO CARACTERE\"\n",
+    "        Estado = \"E1\"\n",
+    "\n",
     "    #E3\n",
     "    if Estado == \"E3\":\n",
-    "        if i in Numeros:\n",
-    "            aux += i\n",
+    "\n",
+    "        if Entrada[i] in Numeros:\n",
+    "            Palavra += Entrada[i]\n",
+    "            Classe = \"NUMERO\"\n",
     "        else:\n",
-    "            print(\"{} CLASSE : NUMERO (TOKEN {})\".format(aux,Numero))\n",
-    "            #TODO EDITAR AQUI\n",
-    "            Numero += 1\n",
-    "            aux = \"\"\n",
     "            Estado = \"E1\"\n",
+    "\n",
     "    #E2\n",
     "    if Estado == \"E2\":\n",
-    "        if (aux + i) in Palavras_Reservadas:\n",
-    "            print(\"{} CLASSE : PALAVRA RESERVADA (TOKEN {})\".format(aux+i,Numero))\n",
-    "            Numero += 1\n",
-    "            aux = \"\"\n",
+    "\n",
+    "        if (aux + Entrada[i]) in Palavras_Reservadas:\n",
+    "            Palavra = aux+Entrada[i]\n",
+    "            Classe = \"PALAVRA RESERVADA\"\n",
     "            Estado = \"E1\"\n",
-    "        elif i in Alfabeto or i in Numeros:\n",
-    "            aux += i\n",
+    "\n",
+    "        elif Entrada[i] in Alfabeto or Entrada[i] in Numeros:\n",
+    "            Palavra += Entrada[i]\n",
+    "            Classe = \"IDENTIFICADOR\"\n",
     "        else:\n",
-    "            print(\"{} CLASSE : IDENTIFICADOR (TOKEN {})\".format(aux,Numero))\n",
-    "            aux = \"\"\n",
+    "\n",
     "            Estado = \"E1\"\n",
-    "        \n",
     "    \n",
-    "    #print(Estado)\n",
+    "    #E7\n",
+    "    if Estado == \"E1\" or i == (Tamanho_Entrada-1):\n",
+    "        \n",
+    "        if Palavra not in Palavras and len(Palavra) > 0:\n",
+    "            Palavras.append(Palavra)\n",
+    "            Classes.append(Classe)\n",
+    "        \n",
+    "\n",
+    "        Palavra = \"\"\n",
+    "        Classe = \"erro\"\n",
     "\n",
     "\n",
+    "aux = 0\n",
+    "for i in range(len(Palavras)):\n",
     "\n",
+    "    print(\"VALOR : {} CLASSE : {} (TOKEN {})\".format(Palavras[i],Classes[i],aux))\n",
+    "    aux += 1\n",
     "\n",
     "\n"
    ]
